# pulse_infer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
build-ci/: DartConfiguration.tcl
cmake/: package.cmake
demo/: CMakeLists.txt  load_safetemsor.cpp  load_safetensor.cpp  qwen3_config_demo.cpp  qwen3_continuous_batch_demo.cpp  qwen3_infer.cpp  qwen3_tokenizer_demo.cpp
include/pulse/: logging.hpp
include/pulse/core/: allocator.hpp  buffer.hpp  error.hpp  safetensor.hpp  tensor.hpp  types.hpp  var.hpp
include/pulse/layer/: embedding.hpp  linear.hpp  rmsnorm.hpp  silu.hpp
include/pulse/model/qwen3/: config.hpp  model.hpp  tokenizer.hpp
include/pulse/ops/: add.hpp  matmul.hpp  mha.hpp  mul.hpp  paged_attention.hpp  paged_kv_write.hpp  rmsnorm.hpp  rope.hpp  silu.hpp
include/pulse/ops/kernels/: add_kernel.hpp  embedding_kernel.hpp  matmul_kernel.hpp  mha_kernel.hpp  mul_kernel.hpp  rmsnorm_kernel.hpp  rope_kernel.hpp  silu_kernel.hpp
include/pulse/ops/kernels/cuda/: add_kernel.cuh  embedding_kernel.cuh  matmul_kernel.cuh  mha_kernel.cuh  mul_kernel.cuh  paged_attention.cuh  paged_kv_write.cuh  rmsnorm_kernel.cuh  rope_kernel.cuh  silu_kernel.cuh
include/pulse/runtime/: block_manager.hpp  block_table.hpp  kv_cache_manager.hpp
include/pulse/scheduler/: continuous_batch_engine.hpp  continuous_batch_scheduler.hpp  inference_request.hpp
include/pulse_infer/: logging.h
include/pulse_infer/core/: config.h
src/: CMakeLists.txt
src/arch/: config.cpp
src/core/: allocastor.cpp  config.cpp  logging.cpp  safetensor.cpp  tensor.cpp  var.cpp
src/layer/: embedding.cpp  linear.cpp  rmsnorm.cpp  silu.cpp
src/model/qwen3/: config.cpp  model.cpp  tokenizer.cpp
src/ops/: add.cpp  matmul.cpp  mha.cpp  mul.cpp  paged_attention.cpp  paged_kv_write.cpp  rmsnorm.cpp  rope.cpp  silu.cpp
src/ops/kernels/cuda/: add_kernel.cu  embedding_kernel.cu  matmul_kernel.cu  mha_kernel.cu  mul_kernel.cu  paged_attention.cu  paged_kv_write.cu  rmsnorm_kernel.cu  rope_kernel.cu  silu_kernel.cu
src/runtime/: block_manager.cpp  block_table.cpp  kv_cache_manager.cpp
src/scheduler/: continuous_batch_engine.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/core/: test_allocator.cpp  test_buffer.cpp  test_error.cpp  test_safetensor.cpp  test_tensor.cpp  test_types.cpp  test_var_builder.cpp
tests/layer/: test_embedding.cpp  test_linear.cpp  test_rmsnorm.cpp  test_silu.cpp
tests/ops/: test_add.cpp  test_matmul.cpp  test_mha.cpp  test_mul.cpp  test_rmsnorm.cpp  test_rope.cpp
tests/scheduler/: test_continuous_batch_scheduler.cpp
